--- a/public/login.html
+++ b/public/login.html
@@ -8,7 +8,7 @@
                 <div class="row">
                     <div class="col s12 input-field">
                         <input id="mid" type="text" ng-model="mid" class="validate">
-                        <label for="mid">Miracle ID</label>
+                        <label for="mid">Employee ID</label>
                     </div>
                 </div>
 
